assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400&family=Fredoka:wght@300;400&display=swap');

/* wildcard code inspired from code institute love running project  */

* {
    margin: 0;
    padding: 0; 
    border: none;
}

/* heading and body styling */

h1 {
    font-family: Dongle, sans-serif;
    margin: auto;
    font-size: 100px;
    font-weight: 700;
}

h2 {
    font-family: Dongle, Helvetica, sans-serif;
    font-size: 35px;
    font-weight: 400;
}

h3 {
    font-family: Dongle, Helvetica, sans-serif;
    font-size: 45px;
}

body {
    font-family: Dongle, Helvetica, sans-serif;
    color: black;
    font-weight: 300;
}

/* Postioning of logo and navigation containers and outer container */


#nav-logo {
    display: inline-block;
    height: 100px;
    width: 100%;
}

#menu-container {
    float: right;
}

#logo-container {
    float: left;
}

#menu .active {
    text-decoration: underline;
}

/* Removal of text decoration of love edinburgh link back to homepage */

#logo {
    text-decoration: none;
    color: black;
    font-size: 250%;
}

/* Addition of navigation menu */

#menu {
    font-family: Dongle, Helvetica, sans-serif;
    letter-spacing: 2px;
    font-size: 30px;
    float: right;
    text-transform: uppercase;
}

#menu li {
    margin-left: 10px;
    margin-right: 10px;
    list-style-type: none;
    float: left;
    font-weight: 400;
}
    
#menu a {
    text-decoration: none;
    color: black; 
}


/* alignment of site logo and header */

#logo, #menu {
    line-height: 100px;
    display: flex;
    padding: 10px;
    position: relative;
}

/* addition of hover effect of navigation menu */

#menu a:hover {
    color: gray;
}

/* addition of hero image on homepage */

#hero-outer {
    height: 1200px; 
    width: 100%;
}

/* image from pexels.com - https://www.pexels.com/photo/silhouette-of-big-ben-surrounded-by-fog-during-daytime-161863/ */

#hero-image {
    width: 100%;
    height: 1200px; 
    background: url('../images/hero-image.jpg') no-repeat center center;
    background-size: cover;
}

/* positioning and styling of intro text (overlapping hero image */

#intro-text {
    font-family: Dongle, Helvetica, sans-serif;
    margin: 0 30% 0 0;
    font-size: 35px;
    padding: 50px;
}

#intro-text>h2 {
    line-height: 40px;
}


/* repositioning of iframe element and it's associated div element on homepage */

iframe {
    display: block;
    margin: auto;
}


#welcome-video {
    margin-top: 10px;
}

/* addition of social media in footer and styling of footer */

footer {
     height: 100px;
     width: 100%;
     padding: 15px; 
     text-align: center;
}

footer li {
    display: inline;
}

.social-media {
    text-align: center;
}

.social-media>li {
    list-style-type: none;
}

.social-media i {
    text-decoration: none; 
    margin: 1.1%;
    font-size: 2em;
    color: #000000;
}

.social-media h3 {
    font-size: 200%;
}

/* Addition of background image on events page */

#events-outer {
    height: 1445px;
    width: 100%;
    position: relative;
}

/* Image from pexels.com - https://www.pexels.com/photo/silhouette-photography-of-people-on-theater-1714361/ */

#events-background {
    width: 100%;
    height: 1445px;
    background: url('../images/theatre.jpg') no-repeat center center;
    background-size: cover;
}

/* styling of div elements containing text on events page */

#events-fringe {
     margin-top: 30px;
}

#events-fringe, #events-film, #events-book, #events-music {
    color: white; 
    font-size: 1.85em;
    margin-bottom: 50px;
    background-color: black;
    opacity: 0.85;
    width: 50%;
    text-align: center;
    padding: 10px;
}

#events-fringe, #events-book {
    margin-left: 10%;
    float: left;
}

#events-film, #events-music {
    margin-right: 10%;
    float: right;
}

/* addition of hover effects of div elements on events page.
Code taken from inspiration from https://www.w3schools.com/css/css_image_transparency.asp */

#events-fringe:hover, #events-film:hover, #events-book:hover, #events-music:hover {
    opacity: 1;
}

/* styling of text of eat+drink page */

#eat-text {
    display: block;
    padding: 20px; 
}

#eat-text>p {
    font-size: 32px;
}

#eat-text>h2, #eat-text>p {
    line-height: 30px;
    text-align: center;
    padding: 20px;
}

/* Setting position and display of container of img elements */

#eat-container {
    display: flex;
    margin: auto;
    position: relative;
}

/* styling of img elements on eat+drink page */

#champagne-img, #oysters-img {
    height: auto;
    width: 50%;
    padding-bottom: 30px;
}

/* positioning of travel outer element */

#travel-outer {
    height: 1000px;
    width: 100%;
    overflow: hidden;
}

/* Addition of background image on travel adive page. 
 image from pexels.com - https://www.pexels.com/photo/three-person-crossing-streets-2242170/ */

 #edin-travel {
    background: url('../images/edinburgh-travel.jpg') no-repeat center center;
    height: 1000px;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
    background-size: cover;
}

/* styling of div element on travel page */

#travel-container {
    margin: 0 auto; 
    width: 70%;
    padding-top: 20px;
}

/* styling of text on travel advice page and div element */

#travel-text {
    font-size: 1.9em;
    color: white;
    background-color: black;
    opacity: 0.85;
    width: 70%;
    text-align: center;
    margin: 0 auto; 
    padding: 40px;
}

#travel-text>h2 {
    text-decoration: underline;
    padding: 15px;
}

/* Addition of image background for form on newsletter page. 
Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-1540372/ */

#form-image {
    width: 100%;
    height: 800px;
    background: url('../images/newsletter-signup.jpg') no-repeat center center;
    background-size: cover;
}

#form-text-container {
    width: 90%;
    height: auto;
    background-color: rgb(4, 0, 0);
    color: white;
    font-family: Dongle, Helvetica, sans-serif;
    font-size: 30px;
    opacity: 0.9;
    padding: 10px;
    line-height: 30px;
}

/* Styling of inputs and associated labels on newsletter page */

#newsletter-form {
    width: auto;
    height: auto;
}  

#signup-button {
    height: 20px;
    width: 50px;
}

label {
    display: inline-block;
    width: 105px;
    height: auto;
    font-size: 25px; 
}


/* Responsive element code below */


@media screen and (max-width: 2000px) {

    #form-text-container {
        width: auto;
        margin: 0 auto;
        position: absolute;
    }

    #form-image {
        position: realtive;
    }

    #eat-container {
        width: 70%;
    }
}



@media screen and (max-width: 1200px) {

    iframe {
        width: 100%;
        margin: 0 auto;
    }

    #hero-image {
        width: 100%;
        height: 1200px;
        background-size: cover;
    }

    .social-media h3 {
        font-size: 35px;
    }

    #eat-container {
        width: auto;
    } 

    #travel-text {
        font-size: 2em;
    }


    label {
        font-size: 0.85em; 
    }

    #form-text-container {
        width: 100%;
        height: 200px;
    }

    #newsletter-form>input {
        margin-left: 5px;
    }

}

@media screen and (max-width: 976px) {

   h1 {
        font-size: 1.6em;
    }

    #menu {
        font-size: 1.6em;
    }

    #travel-text {
        font-size: 1.8em;
    }
}

@media screen and (max-width: 821px) {

    h2 {
        font-size: 1.8em;
    }

    #menu>li {
        font-size: 0.9em;
        margin-left: 5px;
        margin-right: 3px;
    }

    #intro-text {
        font-size: 1.6em;
        margin: 0 auto;
        position: relative;
        text-align: justify;
    }

    #menu {
        font-size: 1.8em;
    }

    .social-media h3 {
        font-size: 1.6em;
    }

    .social-media i {
        font-size: 1.5em;
    }

    #travel-container {
        font-size: 50px;
    }

    #travel-text {
        font-size: 0.5em;
    }

    #events-fringe>p, #events-film>p, #events-book>p, #events-music>p {
    font-size: 0.9em;
    }

    #events-fringe>h2, #events-film>h2, #events-book>h2, #events-music>h2 {
        font-size: 1.1em;
        }

    #eat-text>h2 {
        font-size: 1.9em;
    }

    #eat-text>p {
        font-size: 1.7em;
    }

    label {
        font-size: 1.5em;
    }

    #newsletter-form {
        margin-left: 20px;
    }

    #form-text-container {
        font-size: 1em;
        width: auto;
    }

}

@media screen and (max-width: 760px) {

    #logo {
        font-size: 2.5em;
    }

    #menu {
        font-size: 1.5em;
        margin-left: 2px;
        margin-right: 5px;
        letter-spacing: 1px;
    }

    #travel-text>p {
        font-size: 1em;
    } 

    #travel-text>h2 {
        font-size: 1.2em;
    } 

     #events-outer {
        font-size:  0.9em;
    } 

}

@media screen and (max-width: 834px) {

    #nav-logo {
        height: 90px;
    }

    
    h1 {
        font-size: 1.2em;
    }

    #logo-container {
        display: block;
    }

    #menu-container {
        width: 20%;
        height: 100px;
        margin-top: 10px;
        margin-left: 1px;
        text-align: center;
        display: block;
    }

    #menu>li {
        font-size: 0.9em;
        font-weight: 400;
        letter-spacing: 2px;
        line-height: 0.8em;
    }

    #intro-text {
        font-size: 1.4em;
    }

    .signup-button {
        margin-left: auto;
    }

    #travel-text>h2 {
        font-size: 1.2em;
    }

    #travel-text>p {
        font-size: 0.9em;
    }

    #eat-text {
        font-size: 0.9em;
    }

    #eat-text>h3 {
        font-size: 1.8em;
    }

    #events-outer {
        font-size: 0.7em;
    }

    #form-text-container {
        font-size: 1em;
        height: auto;
    }

    #form-text-container {
        font-size: 25px;
    }

}

@media screen and (max-width: 534px) {

    #travel-container {
        width: 100%;
        margin: 0 auto;
    }

}


@media screen and (max-width: 370px) {

    h1 {
        font-size: 1em;
        margin-top: 10px;
        display: block
    }

    iframe {
        width: 90%;
        height: 400px;
    }

    #hero-image {
        width: 90%;
        height: 1200px;
    }

    #menu>li {
        font-size: 0.8em;
        margin-left: 3px;
        margin-right: 3px;
        letter-spacing: 0.2px; 
    }   

    h2 {
        font-size: 1em;
    }

    h3 {
        font-size: 0.9em;
    }
    
    #logo-container {
        justify-content: center;
     }

    #intro-text {
        font-size: 1.2em;
        padding: 20px;
        margin: 0 auto;
    }

    #hero-image {
        width: auto;
    }

    .social-media h3 {
        text-decoration: none;
        color: black;
        font-size: 0.9em;
    }

    .social-media i {
        font-size: 1em;
    }

    #events-outer {
        font-size: 0.6em;
    }

    #eat-container {
        width: 90%;
        height: auto;
        margin: auto;
    }

    #champagne-img,  #oysters-img {
        width: 50%;
        height: auto;

    }

    #eat-text {
        font-size: 20px;
        width: 100%;
        padding: 0;
    }

    #eat-text>h2 {
        font-size: 1.1em;
        line-height: 1px;
        width: 80%;
    }

    #eat-text>p {
        font-size: 0.8em;
    }

    #eat-heading {
        font-size: 15px;
    }

    #travel-text {
        font-size: 0.4em;
        padding: 10px;
    }

    #travel-container {
        width: 100%;
        margin: 0 auto;
    }

    label {
        display: inline-block;
        font-size: 0.7em;
        text-align: left;
        clear: both;
        column-count: 1;
    }

    #newsletter-form {
        margin-left: 10px;
    }

    .signup-button {
        margin-left: auto;
    }

    #form-text-container {
        font-size: 1.5em;
        height: auto;
    }

}

@media screen and (max-width: 280px) {
    h1 {
        font-size: 0.9em;
    }
}

